--- a/public/stylesheets/font/config/css/fontello.css
+++ b/public/stylesheets/font/config/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?12615766');
-  src: url('../font/fontello.eot?12615766#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?12615766') format('woff'),
-       url('../font/fontello.ttf?12615766') format('truetype'),
-       url('../font/fontello.svg?12615766#fontello') format('svg');
+  src: url('../font/fontello.eot?95200306');
+  src: url('../font/fontello.eot?95200306#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?95200306') format('woff'),
+       url('../font/fontello.ttf?95200306') format('truetype'),
+       url('../font/fontello.svg?95200306#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?12615766#fontello') format('svg');
+    src: url('../font/fontello.svg?95200306#fontello') format('svg');
   }
 }
 */
@@ -57,10 +57,12 @@
 .icon-unlock:before { content: '\e803'; } /* '' */
 .icon-download:before { content: '\e808'; } /* '' */
 .icon-upload:before { content: '\e809'; } /* '' */
+.icon-edit:before { content: '\e804'; } /* '' */
 .icon-cancel:before { content: '\e80d'; } /* '' */
-.icon-print:before { content: '\e805'; } /* '' */
 .icon-doc:before { content: '\e80c'; } /* '' */
 .icon-param:before { content: '\e801'; } /* '' */
 .icon-down:before { content: '\e806'; } /* '' */
 .icon-up:before { content: '\e807'; } /* '' */
-.icon-edit:before { content: '\e804'; } /* '' */
+.icon-left:before { content: '\e80e'; } /* '' */
+.icon-right:before { content: '\e80f'; } /* '' */
+.icon-print:before { content: '\e805'; } /* '' */
