fix bug on poll date

--- a/public/views/poll.html
+++ b/public/views/poll.html
@@ -3,11 +3,11 @@
 
     <div class="field">
         <label>Sondage crée le :</label>
-        <span>{{poll.creationDate}}</span>
+        <span>{{poll.formattedCreationDate}}</span>
     </div>
     <div class="field">
         <label>Dernière mise à jour :</label>
-        <span>{{poll.updateDate}}</span>
+        <span>{{poll.formattedUpdateDate}}</span>
     </div>
     <div class="field">
         <label>Description :</label>
