add next step message for poll

--- a/public/views/poll.html
+++ b/public/views/poll.html
@@ -25,6 +25,6 @@
         <label>Statut :</label>
         <span>{{poll.status}}</span>
     </div>
-
+    <h2>Bon ben maintenant y'a plus qu'a implementer le systeme de sondage lui meme !!!<br/>To be continued...</h2>
 </div>
 
