--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -43,6 +43,20 @@ h1{
 
 .bold{font-weight:bold;}
 
+/*---------------------------------------------------------------------*\
+	LISTES
+\*---------------------------------------------------------------------*/
+
+
+ul.default-list li{
+	padding: 10px 0;
+}
+
+/*---------------------------------------------------------------------*\
+	BOUTONS
+\*---------------------------------------------------------------------*/
+
+
 .btn{
 	display:inline-block;
 	margin:10px;
@@ -115,6 +129,11 @@ h1{
     color: #BBBBBB;
 }
 
+/*---------------------------------------------------------------------*\
+	FOOTER
+\*---------------------------------------------------------------------*/
+
+
 .main-footer{
 	font-size:0.6em;
 	color:#888;
@@ -131,7 +150,10 @@ h1{
 
 
 
-/*POP UP*/
+/*---------------------------------------------------------------------*\
+	POPUP
+\*---------------------------------------------------------------------*/
+
 
 
 .glass{
@@ -160,9 +182,13 @@ h1{
 
 
 .popup-header{
-	padding:20px 0;
-	color: #000000;
-	background-color:#F5F5F5;
+    background-color: #F5F5F5;
+    color: #AAAAAA;
+    font-size: 1.5em;
+    font-variant: small-caps;
+    font-weight: bold;
+    padding: 10px 0;
+    text-shadow: 1px 1px 1px #FFFFFF;
 }
 .popup-section{
 	border-bottom:1px solid #F5F5F5;
