--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -16,8 +16,8 @@
 		</div>
 		<div class="ticketsList">
 		    <ul>
-		        <li ng-repeat="ticket in tickets | orderBy:'priority':true" drag="ticket" drag-element-id="ticket_{{$index}}">
-		        	<div id="ticket_{{$index}}" >
+		        <li ng-repeat="ticket in tickets | orderBy:'priority':true">
+		        	<div id="ticket_{{$index}}" ng-click="clickOnTicket(ticket.id)" >
 		        			<span class="ticket-id">#{{ticket.id}}</span>
 		        			<span class="ticket-titre">{{ticket.titre}}</span>
 		        			<span class="ticket-etat">{{ticket.etat}}</span>
