--- a/public/views/displayTicket.html
+++ b/public/views/displayTicket.html
@@ -15,20 +15,21 @@
 			</a>
 		</div>
 		<div id="ticket_{{$index}}" class="ticketContent">
-		        			<span>History ID  {{ticket.id}}</span>
+		        			<span>History ID : {{ticket.id}}</span>
 		        			<span class="ticket-personne">
 		        				Attribué à {{ticket.personne}}
 		        			</span>
 		        			<br/>
+		        			<span>Trac ID : {{ticket.trac_id}}</span>
 		        			<br/>
 		        			<br/>
 		        			<span class="ticket-titre">{{ticket.titre}}</span>
 		        			<span class="ticket-personne">
-		        				Importance {{ticket.importance}}
+		        				Importance: {{ticket.importance}}
 		        			</span>
 		        			<br/>
 		        			<span class="ticket-personne">
-		        				Poids {{ticket.poids}}
+		        				Poids: {{ticket.poids}}
 		        			</span>
 		        			<br/>
 		        			<br/>
