--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -76,8 +76,8 @@ ul.default-list li{
 }
 .fullwidth-btn{
 	margin:2px 0;
-	padding: 10px 5%;
-    width: 90%;
+	padding: 10px;
+    width: 100%;
 }
 .btn:hover, .btn:focus{
 	background-color:#F5F5F5;
