--- a/public/views/planif.html
+++ b/public/views/planif.html
@@ -1,6 +1,6 @@
 
 <div id="container">
-	<h1>Planification - Gestion des ressources</h1>
+	<h1>PLANIFICATION <span>GESTION DES RESSOURCES</span></h1>
 	<form id="new-plannif" name="formPlannif" novalidate>
 
 		<div class="field" id="duree">
