--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -1,14 +1,42 @@
 
-/*--------------------- Menu gauche --------------------*/
+
+#containerBoard{
+	position:relative;
+	height:100%;
+}
 
 
+
+.boardContent, .leftNavigation{
+	height:90%;
+	height: calc(100% - 60px);
+}
+
+
+/*--------------------- Menu top --------------------*/
+
+.topmenu{
+	height: 59px;
+	background:#FFFFFF;
+
+
+	border-bottom: 1px solid #FFFFFF;
+	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1) inset;
+}
+
+.backsection{
+	width: 168px;
+	display: inline-block;
+}
+
+
+
+/*--------------------- Nav gauche --------------------*/
 
 .leftNavigation{
 	width:160px;
-	height:100%;
-	max-height:100%;
 	position:absolute;
-	top:0;
+	top:60px;
 	left:0;
 	overflow:auto;
 	background:#FFFFFF;
@@ -33,37 +61,72 @@
 
 /*--------------------- Tableau de bord  --------------------*/
 .boardContent{
-	height:100%;
 	margin-left : 160px;
-	padding:0 20px;
 	overflow:auto;
 }
-
-.topBoardBar, .ticketsList{
-	padding: 10px;
+.ticketslist{
+	padding:20px;
 }
 
-.topBoardBar{
-	font-size:0.9em;
-	text-align:center;
-}
-
-.ticketsList{
-	padding:0 20px;
-}
-.ticketsList li{
+.ticketslist li{
 	padding:10px;
 	margin:2px;
 	background-color:#FFF;
 	border: 1px solid #aaa;
 	border-radius:2px;
+	min-height: 24px;
 }
-.ticketsList li:hover, .ticketsList li:focus{
+.ticketslist li:hover, .ticketslist li:focus{
 	box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
-.ticketsList span{
-	display:inline-block;
+
+
+
+.ticket-header{
+	display: inline-block;
+	width: 400px;
+	float: left;
+	line-height: 24px;
+	cursor: pointer;
 }
+	.ticket-header-id{
+		display: inline-block;
+		width:40px;
+	}
+	.ticket-header-titre{
+		font-weight:bold;
+	}
+	.ticket-header-personne,.ticket-header-etat{
+		display: inline-block;
+		border-radius: 1px;
+		background: #5F5F5F;
+		font-size:0.7em;
+		line-height: 100%;
+		padding: 4px;
+		color: #FFF;
+	}
+	.ticket-personne{
+	}
+	.ticket-header-etat{
+		background: #ff8000;
+	}
+
+.ticket-move{
+	display: inline-block;
+	width: 100px;
+	float: right;
+}
+
+.ticket-description{
+	padding:0 110px 0 360px;
+	text-align: left;
+	line-height: 24px;
+		font-style: italic;
+		font-size:0.9em;
+	cursor: pointer;
+}
+
+/*
 	.ticket-id{
 		width:40px;
 	}
@@ -90,3 +153,5 @@
 		height: 13%;
 		cursor: default;
 	}
+
+	*/
