--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -5,7 +5,7 @@
 				Back
 			</a>
 		</div>
-		<a class="btn btn-grey icon-add" href="" ng-click="showGlassNewTicket=!showGlassNewTicket">
+		<a class="btn btn-grey icon-add" href="" ng-click="clickOnTicket()">
 			Nouveau Ticket
 		</a>
 		<a class="btn icon-print" ng-click="printPdf()">
