localStorage pour conserver les tickets

--- a/public/views/displayTicket.html
+++ b/public/views/displayTicket.html
@@ -15,7 +15,7 @@
 			</a>
 		</div>
 		<div id="ticket_{{$index}}" class="ticketContent">
-		        			<span>History ID : {{ticket.id}}</span>
+		        			<span>History ID : {{ticket.history_id}}</span>
 		        			<span class="ticket-personne">
 		        				Attribué à {{ticket.personne}}
 		        			</span>
@@ -25,7 +25,7 @@
 		        			<br/>
 		        			<span class="ticket-titre">{{ticket.titre}}</span>
 		        			<span class="ticket-personne">
-		        				Importance: {{ticket.importance}}
+		        				Importance: {{ticket.priority}}
 		        			</span>
 		        			<br/>
 		        			<span class="ticket-personne">
