--- a/public/views/popup.html
+++ b/public/views/popup.html
@@ -1,14 +1,14 @@
-
-<div class="glass" ng-click="hide()"></div>
-<div class="popup">
-	<header class="popup-header">
-		Titre ou infos de la popup
-	</header>
-	<section class="popup-section">
-		Contenu / question : Vous prenez la pilule rouge ?
-	</section>
-	<footer class="popup-footer">
-		<a href="" class="btn" ng-click="hide()">Annuler</a>
-		<a href="" class="btn btn-grey">Enregistrer</a>
-	</footer>
+<div class="glass" ng-click="hide()">
+	<div class="popup">
+		<header class="popup-header">
+			Titre ou infos de la popup
+		</header>
+		<section class="popup-section">
+			Contenu / question : Vous prenez la pilule rouge ?
+		</section>
+		<footer class="popup-footer">
+			<a href="" class="btn" ng-click="hide()">Annuler</a>
+			<a href="" class="btn btn-grey">Enregistrer</a>
+		</footer>
+	</div>
 </div>
