tri des tickets par importance

--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -1,5 +1,4 @@
 
-<div class="glass" ng-click="hide()"></div>
 <div class="popup">
 	<header class="popup-header">
 		Edition de ticket
@@ -11,7 +10,7 @@
 			<label id="lbl">History ID</label>
 			<input type="text" ng-model="ticket.history_id" value="ticket.history_id"/><br/><br/>
 			<label id="lbl">Titre</label>
-			<input type="text" ng-model="ticket.titre" value="ticket.titre"/><br/><br>
+			<input type="text" ng-model="ticket.titre" value="ticket.titre"/><br/><br/>
 			<label id="lbl">Description</label>
 			<input type="text" ng-model="ticket.description" value="ticket.description"/><br/><br/>
 		</div>
